fix: complete SetupImpl with all image loading and category support ✅ All errors fixed: - Add all missing imports (ImageIO, BufferedImage, Files, etc.) - Implement complete image loading from assets - Add createCategories() method - Add image helper methods (loadImageFromAssets, createThumbnail, setImagesForCoffee) - Add createCoffee() helper method - Update all coffee creation methods to use categories and images - Fix runSetup() to create categories first - Use getFirst() instead of get(0) for modern Java 🎯 Ready for production!